objects/VPPSR_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>VPPSR_Grantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPPSR Grantor</label>
        <referenceTo>VPPSR_Grantor__c</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>VedaOrganisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPPSR_Secured_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPPSR Secured Party</label>
        <referenceTo>VPPSR_Secured_Party__c</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>VedaOrganisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>organisation_Name__c</fullName>
        <label>organisationName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Number_Type__c</fullName>
        <label>organisationNumberType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Number__c</fullName>
        <label>organisationNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Organisation</label>
    <nameField>
        <displayFormat>VORG-{0000000}</displayFormat>
        <label>Veda Organisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>